--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo-container">
-           <a href="index.html"><img src="img/logo-nutritionlite.png" alt="Logo NutritionLite" class="logo"></a>
+           <a href="index.html"><img src="file:///C:/Users/migue/Desktop/PROJETO%20BRUTO%20-%20ARQUIVO%20FINAL/img/logo-nutritionlite.png" alt="Logo NutritionLite" class="logo"></a>
         </div>
         <nav>
             <ul>
