--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <section id="home" class="hero">
         <div class="slide-container">
-            <div class="slide fade"><img src="img/slide1.jpg" style="width: 1500px;"></div>
-            <div class="slide fade"><img src="img/slide2.jpg" style="width: 1500px;"></div>
-            <div class="slide fade"><img src="img/slide3.jpg" style="width: 1500px;"></div>
+            <div class="slide fade"><img src="https://s11.aconvert.com/convert/p3r68-cdx67/a53td-q83eb.webp" style="width: 1500px;"></div>
+            <div class="slide fade"><img src="https://s11.aconvert.com/convert/p3r68-cdx67/617yy-zgqrn.webp" style="width: 1500px;"></div>
+            <div class="slide fade"><img src="https://s11.aconvert.com/convert/p3r68-cdx67/nm7zr-eodk3.webp" style="width: 1500px;"></div>
         </div>
     </section>
 
